# MSEP

./: LICENSE  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
examples/: example.py  prodigy_recipe_example.py
examples/.ipynb_checkpoints/: example-checkpoint.py
src/msep/: __init__.py  concurrent_LLM_extractors.py  conll_to_json.ipynb  correction_annotation.ipynb  cross_validation.py  example.py  manual_annotation_utils.py  preannotation_iterative.ipynb  test.txt  variables_classifier_versio_finale_cross_validation_stratifie.ipynb
src/msep/.ipynb_checkpoints/: CamemBERT_medical_status_extractors-checkpoint.py  concurrent_models_evaluation_mistralx_stratifie_cpu-checkpoint.ipynb  cross_validation-checkpoint.py  data_selection-checkpoint.py  example-checkpoint.py  output-checkpoint.txt  preannotation_rules-checkpoint.py  preprocessing-checkpoint.py
