[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MSEP"
version = "0.0.1"
authors = [
  { name="Chuanming DONG", email="chuanming.dong@univ-rennes.fr" },
]
description = "A pipeline for extracting patients' medical status information from clinical documents"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://gitlab.com/ltsi-dms/data-science/recherche-developpement/msep/"
Issues = "https://gitlab.com/ltsi-dms/data-science/recherche-developpement/msep/issues"



